# sentra_cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.prepend.md  pyproject.toml  pyproject.toml.bak  release-notes-v0.1.0.txt  release-notes-v0.1.1.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: fetch_example.py
scripts/: install_context_menu.ps1  remove_context_menu.ps1
src/sentra_cli/: cli.py
tests/: test_cli.py  test_sample.py
