[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentra_cli"
version = "0.1.1"
description = "Sentra CLI - automation helpers for SENTRA_CORE_MEM"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Julien" }]
dependencies = [
  "click>=8.1"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "pre-commit",
  "build",
  "twine"
]

[project.scripts]
sentra = "sentra_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
